[package]
name = "examples"
version = "0.6.4"
description = "Examples of using Winterfell STARK prover/verifier"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
categories = ["cryptography"]
edition = "2021"
rust-version = "1.67"

[lib]
bench = false
doc = false

[[bin]]
name = "winterfell"
path = "src/main.rs"
bench = false
doc = false

[features]
concurrent = ["winterfell/concurrent", "std"]
default = ["std"]
std = ["hex/std", "winterfell/std", "core-utils/std", "rand-utils"]
dhat-heap = []

[dependencies]
winterfell = { version="0.6", path = "../winterfell", default-features = false }
core-utils = { version = "0.6", path = "../utils/core", package = "winter-utils", default-features = false }
rand-utils = { version = "0.6", path = "../utils/rand", package = "winter-rand-utils", optional = true }
hex = { version = "0.4", optional = true }
log = { version = "0.4", default-features = false }
blake3 = { version = "1.3", default-features = false }
env_logger = { version = "0.10", default-features = false }
structopt = { version = "0.3", default-features = false }
dhat = "0.3.2"

[profile.release]
debug = 1

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "do_work"
harness = false